--- a/WebQuanLiCuaHangBanOto/Views/Home/index.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/Home/index.cshtml
@@ -51,21 +51,21 @@
         </div>
         <nav class="h__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./shop-grid.html">Shop</a></li>
+                <li class="active"><a asp-controller="Home" asp-action="ViewIndex">Home</a></li>
+                <li><a asp-controller="Home" asp-action="ViewShop">Shop</a></li>
                 <li>
                     <a href="#">Pages</a>
                     <ul class="header__menu__dropdown">
-                        <li><a href="./shop-details.html">Shop Details</a></li>
-
-                        <li><a href="./checkout.html">Check Out</a></li>
-                        <li><a href="./blog-details.html">Blog Details</a></li>
+                        <li><a asp-controller="Home" asp-action="LogDetail">Shop Details</a></li>
+                        <li><a asp-controller="Home" asp-action="Checkout">Check Out</a></li>
+                        <li><a asp-controller="Home" asp-action="Blogdetail">Blog Details</a></li>
                     </ul>
                 </li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a asp-controller="Home" asp-action="Blog">Blog</a></li>
+                <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
             </ul>
         </nav>
+
         <div id="mobile-menu-wrap"></div>
         <div class="header__top__right__social">
             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -116,27 +116,27 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+                        <a href="/Home/index"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li class="active"><a href="./shop-grid.html">Shop</a></li>
+                            <li><a href="/Home/Index">Home</a></li>
+                            <li class="active"><a href="/Home/Shopgrid">Shop</a></li>
                             <li>
                                 <a href="#">Pages</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="/Home/ShopDetails">Shop Details</a></li>
+                                    <li><a href="/Home/Checkout">Check Out</a></li>
+                                    <li><a href="/Home/BlogDetail">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="/Home/Blog">Blog</a></li>
+                            <li><a href="/Home/Contact">Contact</a></li>
                         </ul>
                     </nav>
+
                 </div>
 
                 <div class="h__open">
@@ -264,7 +264,7 @@
             <div class="row featured__filter">
                 <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-1.png">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-1.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -294,7 +294,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix mercedes">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" <img src="@Url.Content("/img/featured/feature-3.jpg")">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-3.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -411,7 +411,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+                            <a href="index.cshtml"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                         </div>
                         <ul>
                             <li>Address: HO CHI MINH</li>
@@ -463,7 +463,7 @@
                     <div class="footer__copyright">
                         <div class="footer__copyright__text">
                             <p>
-                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">DTCAR</a>
                             </p>
                         </div>
 
